--- a/小程序菜单showActionSheet和选择器picker组合/app.json
+++ b/小程序菜单showActionSheet和选择器picker组合/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/mature/mature",
     "pages/picker/picker",
-    "pages/showActionSheet/showActionSheet"
+    "pages/showActionSheet/showActionSheet",
+    "pages/my-picker/my-picker"
   ],
   "window": {
     "backgroundTextStyle": "light",
